<resources>
    <string name="app_name">Champions</string>
    <string name="region">Region</string>
    <string name="alias">Alias</string>
    <string name="champion_name">Nama Champion</string>
    <string name="story">Cerita</string>
    <string name="wise_word">Wise Word</string>
    <string name="nama_saya">Moh.Irvan Andriansyah</string>
    <string name="email_saya">111202012898@mhs.dinus.ac.id</string>
    <string name="role_mid">https://raw.githubusercontent.com/davidherasp/lol_images/master/role_lane_icons/MIDDLE.png</string>
    <string name="role_jungle">https://raw.githubusercontent.com/davidherasp/lol_images/master/role_lane_icons/JUNGLE.png</string>
    <string name="role_solo">https://raw.githubusercontent.com/davidherasp/lol_images/master/role_lane_icons/TOP.png</string>
    <string name="role_duo">https://raw.githubusercontent.com/esports-bits/lol_images/master/role_lane_icons/ADC.png</string>
    <string name="role_support">https://raw.githubusercontent.com/esports-bits/lol_images/master/role_lane_icons/SUPPORT.png</string>
    <string-array name="data_name">
        <item>Caitlyn</item>
        <item>Ezreal</item>
        <item>Graves</item>
        <item>Janna</item>
        <item>Karma</item>
        <item>Katarina</item>
        <item>Lux</item>
        <item>Malzahar</item>
        <item>Viktor</item>
        <item>Yasuo</item>
    </string-array>
    <string-array name="data_alias">
        <item>-The Sheriff of Piltover-</item>
        <item>-The Prodigal Explorer-</item>
        <item>-The Outlaw-</item>
        <item>-The Storm\'s Fury-</item>
        <item>-The Enlightened One-</item>
        <item>-The Sinister Blade-</item>
        <item>-The Lady of Luminosity-</item>
        <item>-The Prophet of The Void-</item>
        <item>-The Machine Herald-</item>
        <item>-The Unforgiven-</item>
    </string-array>
    <string-array name="data_region">
        <item>Piltover</item>
        <item>Piltover</item>
        <item>Bilgewater</item>
        <item>Zaun</item>
        <item>Ionia</item>
        <item>Noxus</item>
        <item>Demacia</item>
        <item>Void</item>
        <item>Piltover</item>
        <item>Ionia</item>
    </string-array>
    <string-array name="data_wise_word">
        <item>\"Untuk bisa menjadi pemburu terbaik, kau harus berpikir seperti mangsamu\"</item>
        <item>\"Kalau aku tidak tahu aturannya, lalu bagaimana bisa aku melanggarnya?\"</item>
        <item>\"Kami di sini untuk Gold yang kau punya, bukan kepalamu, jadi jangan sok menjadi pahlawan\"</item>
        <item>\"Janganlah takut akan angin perubahan – mereka akan selalu berada di belakangmu\"</item>
        <item>\"Saat Ionia berubah, aku juga harus berubah\"</item>
        <item>\"Jangan pernah bertanya tentang kesetiaan saya. Anda tidak pernah tahu apa yang saya pernah jalankan\"</item>
        <item>\"Cahaya yang ada dalam dirikulah yang membuatku berbeda, dan aku senantiasa berhati-hati saat akan memancarkannya\"</item>
        <item>\"Kami abadi. Kami menuntut korban\"</item>
        <item>\"Jantung mesin tak pernah berhenti berdetak, dan tak pernah terganggu perasaan. Jadi apa gunanya menggantungkan hidup pada tubuh bernyawa yang rapuh?\"</item>
        <item>\"Kematian itu seperti angin—selalu ada di sisiku\"</item>
    </string-array>
</resources>