<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".DetailActivity"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_detail_name"
            style="@style/Detail.Text.Name"
            android:text="@string/champion_name"/>

        <TextView
            android:id="@+id/tv_detail_alias"
            style="@style/Detail.Text.Alias"
            android:text="@string/alias"/>

        <TextView
            android:id="@+id/tv_detail_wise_word"
            style="@style/Detail.Text.WiseWord"
            android:text="@string/wise_word"/>

        <TextView
            android:id="@+id/tv_detail_story"
            style="@style/Detail.Text.Story"
            android:text="@string/story" />
    </LinearLayout>
</ScrollView>